--- a/src/app/organization-detail/create-org/create-org.template.html
+++ b/src/app/organization-detail/create-org/create-org.template.html
@@ -73,7 +73,10 @@
         <span class="usa-width-one-third m_R-0 p_T-2x p_B-1x"><h4>{{pair.des}}:</h4></span>
         <!--<span class="usa-width-two-thirds p_T-2x p_B-1x">&nbsp;{{pair.value}}</span>-->
         <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x" *ngIf="pair.des !== 'Description'">&nbsp;{{pair.value}}</p>
-        <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x" *ngIf="pair.des === 'Description'">&nbsp;{{pair.value}}</p>
+        <p class="usa-width-two-thirds m_T-0 p_T-2x p_B-1x" *ngIf="pair.des === 'Description'">&nbsp;
+            <span *ngIf="pair.value.length < 500 || showFullDes">{{pair.value}}</span>
+            <span *ngIf="pair.value.length >= 500 && !showFullDes">{{pair.value.substr(0,500)}}...<a class="org-create-expand-link" (click)="showFullDescription()">read more</a></span>
+        </p>
       </div>
       <div *ngIf="isAddressNeeded()">
         <p class="m_L-3x m_B-1x" *ngFor="let address of orgAddresses">
