--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -8,7 +8,7 @@
   <div *ngIf="mode === 'edit' || userCameFromRoleWorkspace">
     <div class="usa-grid-full">
       <div>
-        <strong>Domain</strong>
+        <label>Domain</label>
       </div>
       <div class="m_T-2x">
         <span *ngIf="domain">{{labelForDomain(domain)}}</span>
