--- a/src/app/role-management/manage-request/manage-request.page.html
+++ b/src/app/role-management/manage-request/manage-request.page.html
@@ -1,8 +1,8 @@
-<div class="manage-request usa-grid m_T-4x">
+<div class="manage-request m_A-4x clearfix">
   <div class="usa-width-one-fourth">
-    <button class="usa-button usa-button-transparent" [routerLink]="['/access/role-workspace']"><i class="fa fa-arrow-circle-left"></i>&nbsp;Back to Role Workspace</button>
+    <button class="usa-button usa-button-transparent back-button" [routerLink]="['/access/role-workspace']"><i class="fa fa-arrow-circle-left"></i>&nbsp;Back to Role Workspace</button>
   </div>
-  <div class="usa-width-three-fourths">
+  <div class="usa-width-one-half">
     <!--<div class="usa-alert usa-alert-error"><code>{{request | json}}</code></div>-->
     <h1>Access Request</h1>
     <div class="description-block">
@@ -16,7 +16,7 @@
       </div>
       <div class="usa-grid-full m_T-2x">
         <div class="usa-width-one-fourth">
-          <strong>Requestor:</strong>
+          <strong>Requested By:</strong>
         </div>
         <div class="usa-width-three-fourths">
           {{request.requestorName}}
@@ -70,4 +70,5 @@
       >Submit</button>
     </div>
   </div>
+  <div class="usa-width-one-fourth">&nbsp;</div>
 </div><!-- page -->
