--- a/src/styles/components/role-management/_manage-request.scss
+++ b/src/styles/components/role-management/_manage-request.scss
@@ -1,4 +1,11 @@
 .manage-request {
+
+  padding: .5em;
+
+  .back-button {
+    padding-left: .5em;
+  }
+
   .description-block {
     padding: .5em;
     border: solid 2px black;
@@ -6,5 +13,17 @@
 
   .usa-unstyled-list {
     margin-top: 1em;
+  }
+
+  h1 {
+    margin-top: .25em;
+  }
+
+  label {
+    max-width: 100%
+  }
+
+  textarea {
+    max-width: 100%
   }
 }
