SAM-6824-autocomplete bug fixes

--- a/src/app/assistance-listing/assistance-listing-operations/sections/criteria-information/criteria-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/criteria-information/criteria-information.template.html
@@ -97,7 +97,7 @@
   <samTextArea
     [control]="falCriteriaForm.controls['assUsageDesc']"
     [name]="'assistanceusage-description-input'"
-    [label]="'Describe how assistance may be used.'"
+    [label]="'Describe how assistance may be used. Use specific terms that will help public users find this listing.'"
     [required]="true"
     formControlName="assUsageDesc"></samTextArea>
   <samCheckboxToggledTextarea [options]="useResConfig"
