[SAM-9076] Toggle matching radio buttons

--- a/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
+++ b/src/app/assistance-listing/components/formula-matching/formula-matching.template.html
@@ -56,6 +56,7 @@
 
       <samRadioButton [name]="name + '-matching-radio-buttons'"
                       [options]="matchingRequirementsOptions"
+                      [hidden]="model.checkbox.indexOf('matching') === -1"
                       [formControlName]="'matchingRequirements'"
       ></samRadioButton>
 
