--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -42,12 +42,9 @@
     float: left;
     padding: 12px 5px;
   }
-
-  /*  .fal-label-margin {
-      margin-top: -1em;
-      margin-bottom: -1em;
-    }*/
-
+  .toggle-text-checkbox .label {
+    display: inline;
+  }
   .fal-obligations-label {
     font-weight: bold;
     color: black;
