--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -115,6 +115,13 @@ home samsearchbar{
   @include unstyled-list;
 }
 
+.usa-font-lead {
+  font-family: $font-serif;
+  font-size: $lead-font-size;
+  line-height: $lead-line-height;
+  max-width: $lead-max-width;
+}
+
 /*******************************
         Legacy 
 *******************************/
