clear errors on focus

--- a/src/app/role-management/manage-request/manage-request.page.html
+++ b/src/app/role-management/manage-request/manage-request.page.html
@@ -60,6 +60,7 @@
         [label]="'Message:'"
         [errorMessage]="messageError"
         [placeholder]="messagePlaceholder()"
+        (focusEvent)="onFocusMessage($event)"
       ></samTextArea>
     </div>
     <div class="clearfix">
